--- a/FoRest - Backend/src/main/resources/application.properties
+++ b/FoRest - Backend/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8085
 server.servlet.context-path=/Forest
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=chadi.arfaoui@esprit.tn
+spring.mail.password=213JMT0203
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
