--- a/FoRest - Backend/src/main/resources/application.properties
+++ b/FoRest - Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/Forest?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Forestdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
@@ -8,6 +8,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8089    
 server.servlet.context-path=/Forest
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=chadi.arfaoui@esprit.tn
+spring.mail.password=213JMT0203
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 
 
 ### JWT ###
