--- a/FoRest - Backend/src/main/resources/application.properties
+++ b/FoRest - Backend/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mail.password=213JMT0203
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
