--- a/FoRest - Backend/src/main/resources/application.properties
+++ b/FoRest - Backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=8089    
+server.port=8085
 server.servlet.context-path=/Forest
 
 spring.mail.host=smtp.gmail.com
@@ -16,6 +16,7 @@ spring.mail.password=213JMT0203
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 
